# z00gpt

./: .gitignore  README.md  docker-compose.yml
apps/web/: Dockerfile  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/lib/: api.ts
apps/web/app/projects/[id]/: page.tsx
apps/web/app/projects/[id]/datasets/[datasetId]/: page.tsx
apps/web/app/settings/: page.tsx
apps/web/tests/: smoke.spec.ts
docs/: architecture.md  local-setup.md  security.md
sample-data/: sample.csv
services/api/: Dockerfile  pyproject.toml
services/api/app/: db.py  importers.py  llm.py  main.py  profiling.py  tools.py
services/api/tests/: test_profiling.py  test_sql.py
