[project]
name = "llm-data-analytics-api"
version = "0.1.0"
description = "Local LLM Data Analytics API"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.23",
  "pandas>=2.0",
  "duckdb>=0.9",
  "python-multipart>=0.0.7",
  "pydantic>=2.6",
  "sse-starlette>=1.6",
  "httpx>=0.27",
  "openpyxl>=3.1",
  "pyarrow>=15.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
